--- a/phpAjax/php-api-fetch-update_08.html
+++ b/phpAjax/php-api-fetch-update_08.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch API php - Ajax </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/phpAjax/css/style.css">
 </head>
 
@@ -53,12 +54,13 @@
     </div>
 </body>
 <!-- jquery  -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script>
     $(document).ready(() => {
 
         // close the form model 
-        $(document).on("click", "#closeBtn", function() {
+        $(document).on("click", "#closeBtn", function () {
             $("#editModel").hide(500);
         })
 
@@ -70,7 +72,7 @@
             $.ajax({
                 url: url,
                 type: "GET",
-                success: function(data) {
+                success: function (data) {
 
                     var html = `  <thead>
                     <tr>
@@ -91,7 +93,7 @@
                                 <td>${element.age}</td>
                                 <td>${element.gender}</td>
                                 <td><button class="btn btn-sm editBtn bg-warning" data-eid="${element.id}">Edit</button></td>
-                                <td><button class="btn btn-sm bg-danger" data-did="${element.id}">Delete</button></td>
+                                <td><button class="btn btn-sm deleteBtn bg-danger" data-did="${element.id}">Delete</button></td>
                             </tr>`;
 
                     }
@@ -104,7 +106,7 @@
         }
 
         // Get the data from API for update and show the model 
-        $(document).on("click", ".editBtn", function() {
+        $(document).on("click", ".editBtn", function () {
             // show form model 
             $("#editModel").show(500);
             var Id = $(this).data("eid");
@@ -118,7 +120,7 @@
                 url: url,
                 type: "POST",
                 data: json_send,
-                success: function(data) {
+                success: function (data) {
                     $("#userid").val(data[0].id);
                     $("#username").val(data[0].name);
                     $("#userage").val(data[0].age);
@@ -130,7 +132,7 @@
 
 
         // update btn click - update the data in database using api
-        $(document).on("click", "#updateBtn", function(e) {
+        $(document).on("click", "#updateBtn", function (e) {
             e.preventDefault();
             var Name = $("#username").val();
             var Age = $("#userage").val();
@@ -154,7 +156,7 @@
                     url: url,
                     type: "PUT",
                     data: json_send,
-                    success: function(data) {
+                    success: function (data) {
                         if (data.status) {
                             fetchData();
                             $("#editModel").hide(500);
@@ -166,6 +168,34 @@
                 })
             }
         })
+
+
+        // Delete btn click - Delete the data in database using api
+        $(document).on("click", ".deleteBtn", function () {
+            var id = $(this).data("did");
+            var dataJson = {
+                userid: id,
+            };
+
+            var json_send = JSON.stringify(dataJson);
+
+            url = "http://localhost/PHP-API/php-api-delete-data.php";
+            if (confirm("Do you want to delete this record?")) {
+                $.ajax({
+                    url: url,
+                    type: "DELETE",
+                    data: json_send,
+                    success: function (data) {
+                        if (data.status) {
+                            fetchData();
+                        } else {
+                            alert("Unable to Delete!");
+                        }
+                    }
+                })
+            }
+        })
+
 
 
     })
