--- a/phpAjax/php-api-fetch-update_08.html
+++ b/phpAjax/php-api-fetch-update_08.html
@@ -42,6 +42,9 @@
 
     <div class="container">
         <h2>Fetch api in jquery</h2>
+        <div class="col-md-6">
+            <input type="search" id="search" class="form-control" placeholder="Type here to search">
+        </div>
     </div>
     <div class="container">
         <section class="my-4">
@@ -197,8 +200,53 @@
         })
 
 
+        // search using api 
+        $(document).on("keyup", "#search", function () {
+            var search_term = $(this).val();
+            search_term = search_term.trim();
+            var searchObj = {
+                search: search_term
+            } 
+            var jsonsearchterm = JSON.stringify(searchObj);
 
-    })
+            var url = `http://localhost/PHP-API/php-api-search-data.php?search=${search_term}`;
+            $.ajax({
+                url: url,
+                type: "GET",
+                success: function (data) {
+
+                    var html = `  <thead>
+                    <tr>
+                        <th>id</th>
+                        <th>name</th>
+                        <th>age</th>
+                        <th>gender</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>`;
+                    for (let i = 0; i < data.length; i++) {
+                        const element = data[i];
+                        html += `<tr>
+                                <td>${element.id}</td>
+                                <td>${element.name}</td>
+                                <td>${element.age}</td>
+                                <td>${element.gender}</td>
+                                <td><button class="btn btn-sm editBtn bg-warning" data-eid="${element.id}">Edit</button></td>
+                                <td><button class="btn btn-sm deleteBtn bg-danger" data-did="${element.id}">Delete</button></td>
+                            </tr>`;
+
+                    }
+                    html += `<tbody>`;
+                    $("#table").html(html);
+                }
+            });
+        });
+
+
+
+    });
 </script>
 
 </html>
